[project]
name = "ka-progress"
version = "0.1.0"
description = "Simple tool to track progress on Khan Academy"
readme = "README.md"
authors = [
    { name = "Piotr Szpetkowski", email = "github.transpose133@passmail.net" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"
